# Yosys_extensions

./: .gitignore  CMakeLists.txt  EXTENDING.md  README.md  doug.cc  doug_smash.cc  doug_split.cc
attic/: Makefile  hello.cc
src/: DriverSpec.cc  DriverSpec.h  branch_mux.cc  branch_mux.h  doug_smash.cc  driver_tools.cc  driver_tools.h  post_process.cc  post_process.h  uf_generator.cc  uf_generator.h  unroll.cc  unroll.h  util.cc  util.h  write_llvm.cc  write_llvm.h  yosys_func_extract.cc
